--- a/style.css
+++ b/style.css
@@ -7,3 +7,135 @@
   font-weight: <weight>;
   font-style: normal;
 }
+.display-flex{
+    display: flex;
+}
+
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-item {
+    list-style: none;
+    margin-right: 30px;
+
+}
+.nav-link{
+        text-decoration: none;
+        font-weight: 500px;
+        
+    }
+
+.text-gray{
+    color:#424242;
+}   
+.text-light-gray{
+    color: #727272;
+
+} 
+.header-background-color{
+    background-color:rgba(255, 144, 14, 0.1);
+}
+.navbar,.banner{
+    max-width: 800px;
+    margin: 0px auto;
+}
+
+
+/* video-03 */
+/* video-03 */
+.brand-name{
+    font-weight: bold;
+    font-size: 2rem;
+}
+.banner-image{
+    max-width: 800px;
+    margin-top: 30px;
+    width: 100%;
+}
+/* banner related style */
+.banner-content{
+    max-width: 600px;
+    margin: 0px auto;
+    text-align: center;
+
+}
+.banner-title{
+    font-weight: bold;
+    font-size: 3rem;
+}
+.primary-button{
+    background-color: #FF900E;
+    color: white;
+    padding: 10px 15px;
+    font-size: 1.2rem;
+    font-weight: 600px;
+    border-radius: 4px;
+    border: none;
+}
+
+/* responsive media query */
+@media screen and (max-width:576px) {
+    .navbar,.nav-links{
+
+        flex-direction: column;
+        text-align: center;        
+    }
+    .nav-links{
+        gap:10px;
+    }   
+    
+}
+
+/* video-04 */
+/* video-04 */
+main{
+    max-width: 800px;
+    margin: 0px auto;
+}
+.first-section{
+    align-items: center;
+}
+.team-image{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;   
+
+}
+main>section{
+
+    margin-top: 70px;
+}
+.our-feature{
+    margin-left: 50px;
+   
+   
+}
+#quick-list{
+    font-weight: 400;
+}
+.section-title{
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+/* video-05 */
+/* video-05 */
+#Features{
+    color:#FF900E
+}
+/* responsive media query */
+@media screen and (max-width:576px) {
+    .navbar,.nav-links,.first-section{
+
+        flex-direction: column;
+        text-align: center;   }
+        
+     .team-image{
+        grid-template-columns: repeat(1,1fr);
+     }  
+     .our-feature{
+        margin-left: 0px;
+     } 
+  
+}
