--- a/style.css
+++ b/style.css
@@ -74,18 +74,7 @@
     border: none;
 }
 
-/* responsive media query */
-@media screen and (max-width:576px) {
-    .navbar,.nav-links{
 
-        flex-direction: column;
-        text-align: center;        
-    }
-    .nav-links{
-        gap:10px;
-    }   
-    
-}
 
 /* video-04 */
 /* video-04 */
@@ -99,8 +88,11 @@ main{
 .team-image{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;   
-
+    gap: 10px;  
+    /* width: 50%;  */
+}
+.team-image img{
+    width: 100%;
 }
 main>section{
 
@@ -108,6 +100,7 @@ main>section{
 }
 .our-feature{
     margin-left: 50px;
+    width:50%
    
    
 }
@@ -124,18 +117,154 @@ main>section{
 #Features{
     color:#FF900E
 }
+
+/* video-05 */
+/* video-05 */
+/* nothing need any css option */
+
+/* video-06 */
+/* video-06 */
+/* card-related-style */
+
+.fact-card{
+    border: 1px solid red;
+    width: 180px;
+    height: 180px;
+    border-radius: 4px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    
+    gap:10px
+   
+}
+.card-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+}
+ 
+.fact-number{
+    font-size: 1.2rem;
+    font-weight: 600;
+
+    margin-top: 0px;
+    margin-bottom:0px;
+}
+.fact-name{
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: #727272;
+    margin-top: 0px;
+
+}
+.fact-description{
+    max-width:500px;
+}
+
+
+/* video-07 */
+.sponser-info{
+    max-width: 540px;
+    margin: 20px auto;
+    text-align: center;
+}
+.sponsor-company{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
+.sponsor-company img{
+    filter: grayscale(100%);
+}
+
+/* video-08 */
+/* video-08 */
+#feature-start-title{
+    border-left: 10px solid #FF900E ;
+    padding-left: 10px;
+}
+.feature-card{
+   padding: 10px;
+   border-radius: 2px;
+   box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.06);
+   margin-bottom: 10px;
+
+}
+.feature-title{
+    font-weight: 600;
+    font-size: 1rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+     
+}
+.feature-start{
+    gap: 50px;
+}
+
+
+/* niser 3 item support thaka paysi */
+
+.architect-img {
+    width: 50%;
+}
+.architect-img img{
+    width:100%
+}
+
+.feature-text{
+    width:50%;
+}
+
+/* video-09 */
+/* video-09 */
+
+#experience-badge{
+    padding: 20px 20px;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-left: -50px;
+    margin-top: -100px;
+
+}
+#experience-year{
+    font-size: 2rem;
+    font-weight: 700;
+}
+   
+
+
+
+
 /* responsive media query */
-@media screen and (max-width:576px) {
-    .navbar,.nav-links,.first-section{
+@media screen and (min-width:400px) and (max-width:996px){
+    .navbar,.nav-links,.first-section,.feature-start{
 
         flex-direction: column;
-        text-align: center;   }
+        }
         
-     .team-image{
+     .team-image,.card-container{
         grid-template-columns: repeat(1,1fr);
-     }  
-     .our-feature{
+        justify-content: center;
+        width: 80%;
+     }
+     .card-container{
+        justify-items: center;
+        margin:0px auto;
+        gap: 10px;
+     }
+     .first-section{
         margin-left: 0px;
-     } 
-  
+     }  
+     .sponsor-company,.card-container{
+        grid-template-columns: repeat(3,1fr);
+        justify-items: center;
+     }
+      .our-feature{
+        margin: 0px auto;
+        gap: 0px;     
+     }
+   
+     #experience-badge{
+        margin-top:10px ;
+        margin-left:10 ;
+     }
 }
